--- a/35-springboot-thymeleafdemo-employees-list-db-security/pom.xml
+++ b/35-springboot-thymeleafdemo-employees-list-db-security/pom.xml
@@ -46,8 +46,8 @@
 		<!-- Add Thymeleaf authentication/authorization in templates -->	
 		<dependency>
 		  <groupId>org.thymeleaf.extras</groupId>
-		  <artifactId>thymeleaf-extras-springsecurity6</artifactId>
-		  <version>3.1.0.M1</version>
+		  <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		  <version>3.0.4.RELEASE</version>
 		</dependency>
 		
 		<dependency>
