Add Error page when login is unsuccessful. Add Users and Roles from mySql db using spring mysql connector. Add localization to view pages and JS dialog windows

--- a/35-springboot-thymeleafdemo-employees-list-db-security/src/main/resources/application.properties
+++ b/35-springboot-thymeleafdemo-employees-list-db-security/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # JDBC properties for mysql connector
+# Note Database employee_directory contain the user and authorities tables for spring security (bcrypt)
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false
 spring.datasource.username=springstudent
