Change JDBC url to access the DNS name for localhost.

--- a/35-springboot-thymeleafdemo-employees-list-db-security/src/main/java/employee-persistence.properties
+++ b/35-springboot-thymeleafdemo-employees-list-db-security/src/main/java/employee-persistence.properties
@@ -1,5 +1,5 @@
 # JDBC properties for mysql connector
 
-app.datasource.jdbc-url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false
+app.datasource.jdbc-url=jdbc:mysql://4B0Z7S2:3306/employee_directory?useSSL=false
 app.datasource.username=springstudent
 app.datasource.password=springstudent
